--- a/pages/index.css
+++ b/pages/index.css
@@ -1,342 +1,38 @@
 @import url(./vendor/normalize.css);
-
-.page {
-  background-color: #2A2C2F;
-  max-width: 1280px;
-  font-family: 'Inter';
-  font-style: normal;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%; 
-  text-rendering: optimizeLegibility;
-  color: #FFFFFF;
-  margin: 0 auto;
-  box-sizing: border-box;
-}
-
-.header {
-  padding: 28px 48px 56px 48px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header__logo {
-  width: 176px;
-  height: 52px;
-}
-
-.header__lang-link {
-  font-size: 24px;
-  line-height: 28px;
-  font-weight: 400;
-  text-decoration: none;
-  color: #FFFFFF;
-  padding-left: 18px;
-}
-
-.header__lang-link_active {
-  text-decoration-line: underline;
-}
-
-.lead {
-  padding: 0 148px;
-}
-
-.lead__title {
-  max-width: 720px;
-  font-weight: 900;
-  font-size: 96px;
-  line-height: 100px;
-  text-align: center;
-  margin: 0 auto;
-}
-
-.lead__subtitle {
-  max-width: 640px;
-  max-height: 72px;
-  font-weight: 400;
-  font-size: 30px;
-  line-height: 36px;
-  text-align: center;
-  margin: 0 auto;
-  padding-bottom: 64px;
-  padding-top: 32px;
-}
-
-.lead__image {
-  max-width: 984px;
-  padding-bottom: 8px;
-  vertical-align: top;
-  display: block;
-  margin: 0 auto;
-}
-
-.lead__caption {
-  width: calc(100% - 148px*2);
-  height: 14px;
-  font-weight: 400;
-  font-size: 10px;
-  line-height: 14px;
-  text-transform: uppercase;
-  margin: 0;
-  padding: 0;
-  letter-spacing: 1.5px;
-}
-
-.intro {
-display: flex;
-flex-direction: column;
-margin: 92px 148px;
-box-sizing: border-box;
-max-width: 690px;
-}
-
-.intro__title {
-  font-weight: 900;
-  font-size: 54px;
-  line-height: 58px;
-  margin: 0;
-  padding-bottom: 40px;
-}
-
-.intro__text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 26.08px;
-  padding-bottom: 33px;
-  box-sizing: border-box;
-  max-width: 690px;
-  min-height: 208px;
-  margin: 0;
-}
-
-.intro__list {
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 18px;
-  margin: 0; 
-}
-
-.photo-grid {
-  max-width: 1184px;
-  margin: 0 auto;
-  padding: 0 48px;
-}
-
-.photo-grid__list {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 16px;
-  justify-content: center;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.photo-grid__item {
-  box-sizing: border-box;
-  object-fit: cover;
-  max-width: 284px;
-  max-height: 213px;
-}
-
-.photo-grid__img {
-  width: 284px;
-  height: 213px;
-}
-
-.place {
-  max-width: 984px;
-  padding: 92px 148px 12px;
-  margin: 0 auto;
-}
-
-.place__item {
-  list-style: none;
-  display: grid;
-  grid-template-columns:  460px 1fr;
-  column-gap: 40px;
-  row-gap: 48px;
-  grid-template-areas:
-    "title website"
-    "image text";
-  padding-bottom: 80px;
-}
-
-.place__title {
-  grid-area: title;
-  margin: 0;
-  font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
-  max-width: 460px;
-}
-
-.place__image {
-  grid-area: image;
-  max-width: 100%;
-  width: 460px;
-  object-fit: cover;
-}
-
-.place__website {
-  grid-area: website;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  row-gap: 12px;
-}
-
-.place__url-heading {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 20px;
-  letter-spacing: 2px;
-  color: #AAAAAA;
-  margin: 0;
-  padding: 0;
-}
-
-.place__link {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  text-decoration-line: underline;
-  color: #FFFFFF;
-}
-
-.place__link:hover {
-  opacity: 0.8;
-}
-
-.place__paragraph {
-  display: flex;
-  flex-direction: column;
-  row-gap: 26px;
-  max-width: 484px;
-  grid-area: text;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 29px;
-  text-align: start;
-}
-
-.paragraph__margins {
-  margin: 0;
-}
-.cover {
-  max-width: 1184px;
-  width: 100%;
-  margin: 0 auto;
-  box-sizing: border-box;
-  align-items: center;
-}
-
-.cover__overlay {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  box-sizing: border-box;
-  max-width: 100%;
-  min-height: 740px;
-  position: relative;
-  z-index: 0;
-  overflow: hidden;
-  color: #fff;
-  text-decoration: none;
-}
-.cover__overlay:before {
-  content: '';
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,1);
-  opacity: 0.3;
-  z-index: -1;
-  transition: opacity 200ms ease-in-out;
-}
-
-.cover__background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -2;
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  display: block;
-  max-width: 1184px;
-  max-height: 740px;
-}
-
-.cover__overlay:hover:before {
-  opacity: 0.8;
-}
-
-.cover__title {
-  width: 560px;
-  font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
-  margin: 0;
-  text-align: center;
-}
-
-.cover__subtitle {
-  width: 360px;
-  height: 66px;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  margin: 0;
-  padding-top: 32px;
-  text-align: center;
-}
-
-.footer {
-  display: flex;
-  max-width: 1184px;
-  justify-content: space-between;
-  padding: 92px 48px 24px 48px;
-}
-
-.footer__links {
-  display: flex;
-  list-style-type: none;
-  gap: 18px;
-  margin: 0;
-  padding: 0;
-}
-
-.footer__link {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 18px;
-  color: #FFFFFF;
-  text-decoration: none;
-}
-
-.footer__link:hover {
-  opacity: 0.8;
-}
-
-.footer__copyright {
-  margin: 0;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 16px;
-}
+@import url(../blocks/page/page.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__img/photo-grid__img.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+@import url(../blocks/photo-grid/__list/photo-grid__list.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__item/place__item.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__paragraph/_margins/.place__paragraph_margins);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__links/footer__links.css);
 
