--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,6 +1,6 @@
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .content {
-          max-width: 320px;
-          margin: 0 auto;
-      }
+        max-width: 320px;
+        margin: 0 auto;
+    }
 }
