--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -12,21 +12,24 @@
   max-width: 1184px;
   max-height: 740px;
 }
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .cover__background {
-          max-width: 1024px;
-          min-height: 640px;
-        }
+
+@media screen and (max-width: 1279px) {
+  .cover__background {
+    max-width: 1024px;
+    min-height: 640px
+  }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .cover__background {
-          max-width: 768px;
-          min-height: 480px;
-        }
+
+@media screen and (max-width: 1023px) {
+  .cover__background {
+    max-width: 768px;
+    min-height: 480px;
+  }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .cover__background {
-          max-width: 320px;
-          min-height: 200px;
-        }
+
+@media screen and (max-width: 767px) {
+  .cover__background {
+    max-width: 320px;
+    min-height: 200px;
+  }
 }
