--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -8,10 +8,10 @@
   min-height: 740px;
   position: relative;
   z-index: 0;
-  overflow: hidden;
   color: #fff;
   text-decoration: none;
 }
+
 .cover__overlay:before {
   content: '';
   display: block;
@@ -20,32 +20,35 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,1);
+  max-width: 100%;
+  max-height: 100%;
+  background-color: #2A2C2F;
   opacity: 0.3;
   z-index: -1;
   transition: opacity 200ms ease-in-out;
 }
+
 .cover__overlay:hover:before {
   opacity: 0.8;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .cover__overlay {
-          max-width: 1024px;
-          min-height: 640px;
-        }
+@media screen and (max-width: 1279px) {
+  .cover__overlay {
+    max-width: 1024px;
+    min-height: 640px;
+  }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .cover__overlay {
-          max-width: 768px;
-          min-height: 480px;
-        }
+
+@media screen and (max-width: 1023px) {
+  .cover__overlay {
+    max-width: 768px;
+    min-height: 480px;
+  }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .cover__overlay {
-          max-width: 320px;
-          min-height: 200px;
-        }
+
+@media screen and (max-width: 767px) {
+  .cover__overlay {
+    max-width: 320px;
+    min-height: 200px;
+  }
 }
