--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,5 @@
 .cover__subtitle {
-  width: 360px;
-  height: 66px;
+  max-width: 360px;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
@@ -8,12 +7,11 @@
   padding-top: 32px;
   text-align: center;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .cover__subtitle {
-          width: 288px;
-          height: 48px;
-          font-size: 14px;
-          line-height: 16px;
-          padding-top: 16px;
-        }
+
+@media screen and (max-width: 767px) {
+  .cover__subtitle {
+    font-size: 14px;
+    line-height: 16px;
+    padding-top: 16px;
+  }
 }
