--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,10 +6,11 @@
   margin: 0;
   text-align: center;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .cover__title {
-          max-width: 288px;
-          font-size: 32px;
-          line-height: 35px;
-        }
+
+@media screen and (max-width: 767px) {
+  .cover__title {
+    max-width: 288px;
+    font-size: 32px;
+    line-height: 35px;
+  }
 }
