--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,24 +1,29 @@
 .cover {
-  max-width: 1184px;
-  width: 100%;
-  margin: 0 auto;
-  align-items: center;
+    max-width: 1184px;
+    width: 100%;
+    margin: 0 auto;
+    align-items: center;
+    background-image: url(../../images/cover-trains.jpg);
+    background-size: cover;
 }
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+
+@media screen and (max-width: 1279px) {
     .cover {
-          max-width: 1024px;
-          min-height: 640px;
-      }
+        max-width: 1024px;
+        min-height: 640px;
+    }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+@media screen and (max-width: 1023px) {
     .cover {
-          max-width: 768px;
-          min-height: 480px;
-      }
+        max-width: 768px;
+        min-height: 480px;
+    }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
+
+@media screen and (max-width: 767px) {
     .cover {
-          max-width: 320px;
-          min-height: 200px;
-      }
+        max-width: 320px;
+        min-height: 200px;
+    }
 }
