--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -5,12 +5,14 @@
   color: #FFFFFF;
   text-decoration: none;
 }
+
 .footer__link:hover {
   opacity: 0.8;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .footer__link {
-      font-size: 24px;
-      line-height: 24px;
-    }
+
+@media screen and (max-width: 767px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+  }
 }
