--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -5,9 +5,10 @@
   margin: 0;
   padding: 0;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .footer__links {
-      flex-direction: column;
-      row-gap: 32px;
-    }
+
+@media screen and (max-width: 767px) {
+  .footer__links {
+    flex-direction: column;
+    row-gap: 32px;
+  }
 }
