--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,11 +4,15 @@
   font-weight: 400;
   text-decoration: none;
   color: #FFFFFF;
-  padding-left: 18px;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .header__lang-link {
-          font-size: 18px;
-          line-height: 20px;
-        }
+
+.header__lang-link:hover {
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 767px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
