--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,10 +5,11 @@
   margin: 0;
   padding-bottom: 40px;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .intro__title {
-          font-size: 32px;
-          line-height: 35px;
-          max-width: 288px;
-        }
+
+@media screen and (max-width: 767px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+    max-width: 288px;
+  }
 }
