--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,5 @@
 .lead__subtitle {
   max-width: 640px;
-  max-height: 72px;
   font-weight: 400;
   font-size: 30px;
   line-height: 36px;
@@ -9,23 +8,25 @@
   padding-bottom: 64px;
   padding-top: 32px;
 }
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .lead__subtitle {
-          padding-bottom: 56px;
-        }
+
+@media screen and (max-width: 1279px) {
+  .lead__subtitle {
+    padding-bottom: 56px;
+  }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .lead__subtitle {
-          padding-bottom: 56px;
-        }
+
+@media screen and (max-width: 1023px) {
+  .lead__subtitle {
+    padding-bottom: 56px;
+  }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .lead__subtitle {
-          max-width: 288px;
-          max-height: 40px;
-          font-size: 16px;
-          line-height: 20px;
-          padding-bottom: 40px;
-          padding-top: 16px;
-        }
+
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    max-width: 288px;
+    font-size: 16px;
+    line-height: 20px;
+    padding-bottom: 40px;
+    padding-top: 16px;
+  }
 }
