--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -12,14 +12,18 @@
   color: #FFFFFF;
   margin: 0 auto;
   box-sizing: border-box;
+  width: 100%;
+  overflow-x: hidden;
 }
+
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .page {
-          width: 100%;
-      }
+  .page {
+    width: 100%;
+  }
 }
+
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .page {
-          width: 100%;
-      }
+  .page {
+    width: 100%;
+  }
 }
