--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -7,21 +7,24 @@
   padding: 0;
   margin: 0;
 }
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .photo-grid__list {
-          grid-template-columns: repeat(3, 1fr);
-          gap: 14px;
-        }
+
+@media screen and (max-width: 1279px) {
+  .photo-grid__list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 14px;
+  }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .photo-grid__list {
-          grid-template-columns: repeat(2, 1fr);
-          gap: 16px;
-        }
+
+@media screen and (max-width: 1023px) {
+  .photo-grid__list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+  }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .photo-grid__list {
-          grid-template-columns: repeat(1, 1fr);
-          gap: 12px;
-        }
+
+@media screen and (max-width: 767px) {
+  .photo-grid__list {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 12px;
+  }
 }
