--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -1,25 +1,25 @@
-.photo-grid {
-  max-width: 1184px;
+.places__item {
+  max-width: 984px;
+  padding: 92px 148px 12px;
   margin: 0 auto;
-  padding: 0 48px;
 }
 
 @media screen and (max-width: 1279px) {
-  .photo-grid {
+  .places__item {
     max-width: 928px;
+    padding: 92px 48px 12px;
   }
 }
 
 @media screen and (max-width: 1023px) {
-  .photo-grid {
+  .places__item {
     max-width: 720px;
-    padding: 0 24px;
+    padding: 88px 24px 10px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .photo-grid {
-    max-width: 288px;
-    padding: 0 16px;
+  .places__item {
+    padding: 64px 0 16px;
   }
 }
