--- a/blocks/places/place/__website/place__website.css
+++ b/blocks/places/place/__website/place__website.css
@@ -7,8 +7,9 @@
   justify-content: flex-end;
   row-gap: 12px;
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .place__website {
-          padding: 0 12px;
-        }
+
+@media screen and (max-width: 767px) {
+  .place__website {
+    padding: 0 12px;
+  }
 }
