--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -16,7 +16,7 @@
 @media screen and (max-width: 1279px) {
   .cover__background {
     max-width: 1024px;
-    min-height: 640px
+    min-height: 640px;
   }
 }
 
