--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,10 +1,10 @@
 .cover {
     max-width: 1184px;
-    width: 100%;
     margin: 0 auto;
     align-items: center;
     background-image: url(../../images/cover-trains.jpg);
     background-size: cover;
+    background-position: center;
 }
 
 @media screen and (max-width: 1279px) {
@@ -16,7 +16,7 @@
 
 @media screen and (max-width: 1023px) {
     .cover {
-        max-width: 768px;
+        max-width: 767px;
         min-height: 480px;
     }
 }
