--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -14,12 +14,14 @@
 
 @media screen and (max-width: 1023px) {
   .intro {
+    max-width: 720px;
     margin: 88px 24px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .intro {
+    max-width: 288px;
     margin: 64px 16px;
   }
 }
