--- a/blocks/photo-grid/__img/photo-grid__img.css
+++ b/blocks/photo-grid/__img/photo-grid__img.css
@@ -3,23 +3,23 @@
   height: 213px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .photo-grid__img {
     width: 300px;
     height: 225px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .photo-grid__img {
     width: 352px;
     height: 264px;
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .photo-grid__img {
-    min-width: 288px;
-    min-height: 216px;
+    width: 288px;
+    height: 216px;
   }
 }
