--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -4,22 +4,24 @@
   max-width: 284px;
   max-height: 213px;
 }
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .photo-grid__item {
-          max-width: 928px;
-          max-height: 225px;
-        }
+
+@media screen and (max-width: 1279px) {
+  .photo-grid__item {
+    max-width: 928px;
+    max-height: 225px;
+  }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .photo-grid__item {
-          max-width: 720px;
-          max-height: 264px;
-        }
+
+@media screen and (max-width: 1023px) {
+  .photo-grid__item {
+    max-width: 720px;
+    max-height: 264px;
+  }
 }
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .photo-grid__item {
-          max-width: 288px;
-          max-height: 216px;
-        
-        }
+
+@media screen and (max-width: 767px) {
+  .photo-grid__item {
+    max-width: 288px;
+    max-height: 216px;
+  }
 }
